--- a/requirements.txt
+++ b/requirements.txt
@@ -1,118 +1,4 @@
-annotated-types==0.7.0
-anyio==4.9.0
-apturl==0.5.2
-attrs==21.2.0
-blinker==1.4
-Brlapi==0.8.3
-certifi==2020.6.20
-chardet==4.0.0
-chrome-gnome-shell==0.0.0
-click==8.0.3
-cloup==3.0.5
-colorama==0.4.4
-command-not-found==0.3
-cryptography==3.4.8
-cupshelpers==1.0
-dbus-python==1.2.18
-decorator==5.1.1
-defer==1.0.6
-distro==1.7.0
-distro-info==1.1+ubuntu0.2
-docker==5.0.3
-docker-compose==1.29.2
-dockerpty==0.4.1
-docopt==0.6.2
-exceptiongroup==1.2.2
-glcontext==3.0.0
-h11==0.14.0
-httpcore==1.0.8
-httplib2==0.20.2
-httpx==0.28.1
-httpx-sse==0.4.0
-idna==3.3
-importlib-metadata==4.6.4
-isosurfaces==0.1.2
-jeepney==0.7.1
-jsonschema==3.2.0
-keyring==23.5.0
-language-selector==0.1
-launchpadlib==1.10.16
-lazr.restfulclient==0.14.4
-lazr.uri==1.0.6
-louis==3.20.0
-macaroonbakery==1.3.1
-manim==0.18.1
-ManimPango==0.6.0
-mapbox_earcut==1.0.2
-markdown-it-py==3.0.0
-mcp==1.6.0
-mdurl==0.1.2
-meson==0.61.2
-moderngl==5.12.0
-moderngl-window==2.4.6
-more-itertools==8.10.0
-multipledispatch==1.0.0
-netifaces==0.11.0
-networkx==3.4.2
-numpy==1.26.4
-oauthlib==3.2.0
-olefile==0.46
-pexpect==4.8.0
-Pillow==9.0.1
-protobuf==3.12.4
-ptyprocess==0.7.0
-pycairo==1.20.1
-pycups==2.0.1
-pydantic==2.11.3
-pydantic-settings==2.9.1
-pydantic_core==2.33.1
-pydbus==0.6.0
-pydub==0.25.1
-pyglet==2.0.18
-Pygments==2.18.0
-PyGObject==3.42.1
-PyJWT==2.3.0
-pymacaroons==0.13.0
-PyNaCl==1.5.0
-pyparsing==2.4.7
-pyRFC3339==1.1
-pyrr==0.10.3
-pyrsistent==0.18.1
-python-apt==2.4.0+ubuntu3
-python-dateutil==2.8.1
-python-debian==0.1.43+ubuntu1.1
-python-dotenv==1.1.0
-pytz==2022.1
-pyxdg==0.27
-PyYAML==5.4.1
-reportlab==3.6.8
-requests==2.25.1
-rich==13.9.4
-scipy==1.14.1
-screeninfo==0.8.1
-SecretStorage==3.3.1
-six==1.16.0
-skia-pathops==0.8.0.post2
-sniffio==1.3.1
-srt==3.5.3
-sse-starlette==2.2.1
-starlette==0.46.2
-svgelements==1.9.6
-systemd-python==234
-texttable==1.6.4
-tqdm==4.67.0
-typing-inspection==0.4.0
-typing_extensions==4.12.2
-ubuntu-drivers-common==0.0.0
-ubuntu-pro-client==8001
-ufw==0.36.1
-unattended-upgrades==0.1
-urllib3==1.26.5
-uvicorn==0.34.2
-wadllib==1.3.6
-watchdog==6.0.0
-websocket-client==1.2.3
-xdg==5
-xdot==1.2
-xkit==0.0.0
-zipp==1.0.0
+fastmcp
+psycopg2-binary
+python-dotenv
+pydantic
